# Version

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: CI.yml  CosCI.yml  Push.yml  RunFile.yml  ci.y
app/: build.gradle.kts  proguard-rules-debug.pro  proguard-rules.pro
app/apply/: apply-md5.keystore  apply-sha1.keystore  apply-sha224.keystore  apply-sha256.keystore  apply-sha384.keystore  apply-sha512.keystore
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AndroidManifest.xml  Compose.studio  appid.ini  info.Libs  info.ksp  info.ksp.sha384
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/drawable/: ic_fragment_fast.xml  ic_fragment_just.xml  ic_fragment_save.xml  ic_fragment_task.xml  ic_fragment_valo.xml  ic_launcher_background.xml  ic_xyn_7zip.xml  ic_xyn_android.xml  ic_xyn_androidide.xml  ic_xyn_apk.xml  ic_xyn_appmanager.xml  ic_xyn_ashell.xml  ic_xyn_boot_app.xml  ic_xyn_bzip2.xml  ic_xyn_dat.xml  ic_xyn_github.xml  ic_xyn_jshook.xml  ic_xyn_kernelsu.xml  ic_xyn_key.xml  (+14 more)
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
cpp/: apply.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
key/: apply-sha1.keystore  apply-sha224.keystore  apply-sha256.keystore  apply-sha384.keystore  key-keyword-keyboard.txt
main/: settings.gradle.kts
main/app/: build.gradle.kts
main/app/src/main/: AndroidManifest.xml
main/gradle/wrapper/: gradle-wrapper.properties
xml/: AndroidManifest.xml
xml/colors/: colors.xml
xml/strings/: strings.xml
xml/strings-rCN/: strings.xml
(+116 files in other folders)
